# arbos

./: .gitignore  .golangci.yml  AGENTS.md  ERROR_HUNT_FINDINGS.md  LICENSE  Makefile  PIN.md  PROMPT.md  RALPH.md  README.md  USAGE.md  agent.py  arbos.py  bubble_sort.py  channel_id.txt  demo_edits.py  ecosystem.config.cjs  go.mod  go.sum  install.sh  package-lock.json  package.json  poem.md  pyproject.toml  run.sh  sss.ipynb  tsconfig.json
.arbos/prompts/: plan.md  ralph.md  recurring.md
.arbos/watch/: btc-price.last
.github/workflows/: ci.yml  deploy-site.yml  release.yml
canvas/: arbos-codebase-charts-2026-06-11.html  arbos-commit-activity-2026-06-11.html  conversation-recap-2026-06-12.html  us-immigration-stats-2026-06-12.html  us-population-situation-2026-06-12.html
cmd/arbos/: ask.go  (+19 more)
docs/: 01-architecture.md  02-data-model.md  03-ports.md  05-concurrency.md  08-agent-delegation.md  09-context-and-memory.md  10-secrets.md  10-testing.md  11-roadmap.md  12-observability.md  account-api-contract.md  forest.md
ralph/: PROMPT.md  STACK.md  loop.sh
scripts/: arbos  bittensor_sn3_poll.sh  build-commit-push.sh  build-test-commit.sh  capability-audit.sh  dev.sh  e2e-live.sh  fake-mcp-server.py  gen_favicons.py  hourly-update-build-push.sh  install.sh  release.sh  switch-forest-to-arbos-life.sh
site/: wrangler.toml
src/: agent.ts  bot.ts  index.ts  monitor.ts  prompt.ts  queue.ts  ralph.ts  seed-vault.ts  types.ts  vault.ts  workspace.ts
tools/: send_telegram.py
web/: embed.go  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+460 files in other folders)
