[project]
name = "arbos"
version = "0.1.0"
description = "arbos: local installer that bootstraps a Telegram supergroup, bot, and per-project topics."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "unconst", email = "jake@bittensor.com" }
]
dependencies = [
    "aiotdlib>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.6.0",
    "httpx>=0.27.0",
]

[project.scripts]
arbos = "arbos.cli:app"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
